--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,3 +6,14 @@ lint:
  - yapf --style google --recursive --diff .
  only:
  - merge_requests
+
+unittest:
+ stage: test
+ needs: 
+  - pipeline: test
+    job: lint
+ script:
+  - pip install -r requirements.txt
+  - pytest .
+ only:
+  - merge_requests
