--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 image: python:3
 lint:
- stage: test
+ stage: build
  script:
  - pip install yapf
  - yapf --style google --recursive --diff .
@@ -9,9 +9,6 @@ lint:
 
 unittest:
  stage: test
- needs: 
-  - pipeline: test
-    job: lint
  script:
   - pip install -r requirements.txt
   - pytest .
